--- a/estilos.style.css
+++ b/estilos.style.css
@@ -8,7 +8,7 @@ body {
 }
 
 main {
-    background-color: : white;
+    background-color: white;
     width: 500px;
     margin: auto;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, black);
