--- a/estilos.style.css
+++ b/estilos.style.css
@@ -9,7 +9,23 @@ body {
 
 main {
     background-color: white;
-    width: 500px;
+    width: 560px;
     margin: auto;
-    box-shadow: 3px 3px 5px rgba(0, 0, 0, black);
+    padding: 10px;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, rgb(8, 8, 8));
+}
+
+h1, h2 {
+    font-size: 1.5em;
+    color: rgba(58, 0, 112);
+}
+
+img.lado {
+    float: right;
+}
+
+a {
+    text-decoration: None;
+    color: rgba(58, 0, 112);
+    font-weight: bold;
 }
